--- a/newsroom-fulltext-styles.css
+++ b/newsroom-fulltext-styles.css
@@ -12,9 +12,8 @@
 
 .news--detail figcaption {
 
-    /* padding: 0.5rem;
+    font-size: 1rem;
     position: relative;
     text-align: center;
-    z-index: 10; */
 
 }
