--- a/newsroom-fulltext-styles.css
+++ b/newsroom-fulltext-styles.css
@@ -12,7 +12,7 @@
 
 .news--detail figcaption {
 
-    font-size: 1rem;
+    font-size: .8125rem;
     position: relative;
     text-align: center;
 
