publish date dateFormat

--- a/v10-text-new-fulltext.handlebars
+++ b/v10-text-new-fulltext.handlebars
@@ -25,7 +25,7 @@
             {{/ifSet}}
             
             <p>
-              {{{publish element="Publish Date" output="normal" date_format="EEEE, MMMM d, yyyy"}}}
+              {{dateFormat (dateElement element="Publish Date") "EEEE, MMMM d, yyyy"}}
             </p>
           </div>
 
