--- a/v10-text-new-fulltext.handlebars
+++ b/v10-text-new-fulltext.handlebars
@@ -118,16 +118,15 @@
   </div>
 </div>
 
-{{#if (nav id="988" name="Related news in news fulltext")}}
+{{#if (nav id="988" name="Related news in news fulltext")~}}
 <section class="related-news-stories-section global-padding--15x bg--dark bg--blue bg--gradient">
   <div class="grid-container oho-animate-sequence oho-animate--in">
     <div class="grid-x grid-margin-x">
       <div class="cell large-9">
         <div class="section-heading--basic text-margin-reset">
           <h2 class="oho-animate fade-in oho-animate--in">Similar News &amp; Stories</h2>
-
           <div class="section-heading__link global-spacing--2x oho-animate fade-in oho-animate--in">
-            <a href="{{#each (selected element="News Topics")}}{{nav id="991" name="Link to News & Stories"}}{{/each}}">
+            <a href="{{nav id="991" name="Link to News & Stories"}}">
               More Similar News &amp; Stories
             </a>
           </div>
