--- a/v10-text-new-fulltext.handlebars
+++ b/v10-text-new-fulltext.handlebars
@@ -73,7 +73,7 @@
               <li>
                 <a href="{{nav id="991" name="Link to News & Stories"}}?newsTopics={{value}}">{{value}}</a>
               </li>
-            {{/each}}
+            {{~/each}}
           </ul>
         </div>
         {{~/ifSet}}
