close type tilde

--- a/v10-text-new-fulltext.handlebars
+++ b/v10-text-new-fulltext.handlebars
@@ -11,7 +11,7 @@
             {{#ifSet element="News Types" ~}}
                 {{#each (selected element="News Types") ~}}
                   <a href="{{nav id="991" name="Link to News & Stories"}}?newsTypes={{value}}">{{value}}</a>
-                {{/each}}
+                {{~/each}}
             {{~/ifSet}}
           </div>
           <div class="news--detail__details global-spacing--0x text-margin-reset">
