--- a/v10-text-new-fulltext.handlebars
+++ b/v10-text-new-fulltext.handlebars
@@ -26,7 +26,7 @@ Handlebars.registerHelper('urlify', function(value) {
 });
 </script>
 
-{{!-- Fulltext Layout --}}
+{{!-- Check for Image --}}
 {{#ifSet element="Media Library Image"}}
   <div class="hero--basic hero--news global-padding--15x-ignore hero--news__photo bg--dark">
 {{else}}
