chore (fulltext hb) remarks

--- a/v10-text-new-fulltext.handlebars
+++ b/v10-text-new-fulltext.handlebars
@@ -1,4 +1,4 @@
-{{!-- News Detail Hero Fulltext --}}
+{{!-- Newsroom Story Fulltext --}}
 
 {{!-- Check for Image --}}
 {{#ifSet element="Media Library Image"}}
