add types query to newsroom link

--- a/v10-text-new-fulltext.handlebars
+++ b/v10-text-new-fulltext.handlebars
@@ -122,7 +122,7 @@
         <div class="section-heading--basic text-margin-reset">
           <h2 class="oho-animate fade-in oho-animate--in">Similar News &amp; Stories</h2>
           <div class="section-heading__link global-spacing--2x oho-animate fade-in oho-animate--in">
-            <a href="{{nav id="991" name="Link to News & Stories"}}">
+            <a href="{{nav id="991" name="Link to News & Stories"}}?newsTopics={{encodeUrl value}}">
               More Similar News &amp; Stories
             </a>
           </div>
