--- a/v10-text-new-fulltext.handlebars
+++ b/v10-text-new-fulltext.handlebars
@@ -17,7 +17,7 @@
           <div class="eyebrow">
             {{#ifSet element="News Types" ~}}
                 {{#each (selected element="News Types") ~}}
-                  <a href="{{nav id="991" name="Link to News & Stories"}}?newsTypes={{encodeUrl value}}">{{value}}</a>
+                  <a href="{{nav id="991" name="Link to News & Stories"}}?newsTypes={{encodeUrlQuery value}}">{{value}}</a>
                 {{~/each}}
             {{~/ifSet}}
           </div>
@@ -78,7 +78,7 @@
           <ul>
             {{#each (selected element="News Topics") ~}}
               <li>
-                <a href="{{nav id="991" name="Link to News & Stories"}}?newsTopics={{encodeUrl value}}">{{value}}</a> 
+                <a href="{{nav id="991" name="Link to News & Stories"}}?newsTopics={{encodeUrlQuery value}}">{{value}}</a> 
               </li>
             {{~/each}}
           </ul>
@@ -122,7 +122,7 @@
         <div class="section-heading--basic text-margin-reset">
           <h2 class="oho-animate fade-in oho-animate--in">Similar News &amp; Stories</h2>
           <div class="section-heading__link global-spacing--2x oho-animate fade-in oho-animate--in">
-            <a href="{{nav id="991" name="Link to News & Stories"}}?newsTopics={{encodeUrl value}}">
+            <a href="{{nav id="991" name="Link to News & Stories"}}?newsTopics={{encodeUrlQuery value}}">
               More Similar News &amp; Stories
             </a>
           </div>
