--- a/v10-text-new-fulltext.handlebars
+++ b/v10-text-new-fulltext.handlebars
@@ -120,12 +120,14 @@
     <div class="grid-x grid-margin-x">
       <div class="cell large-9">
         <div class="section-heading--basic text-margin-reset">
-          <h2 class="oho-animate fade-in oho-animate--in">Similar News &amp; Stories</h2>
-          <div class="section-heading__link global-spacing--2x oho-animate fade-in oho-animate--in">
-            <a href="{{nav id="991" name="Link to News & Stories"}}?newsTopics={{encodeUrlQuery value}}">
-              More Similar News &amp; Stories
-            </a>
-          </div>
+          {{#ifSet element="News Types" ~}}
+            <h2 class="oho-animate fade-in oho-animate--in">Similar News &amp; Stories</h2>
+            <div class="section-heading__link global-spacing--2x oho-animate fade-in oho-animate--in">
+              <a href="{{nav id="991" name="Link to News & Stories"}}?newsTopics={{encodeUrlQuery value}}">
+                More Similar News &amp; Stories
+              </a>
+            </div>
+          {{~/ifSet}}
         </div>
       </div>
     </div>
