--- a/v10-text-new-fulltext.handlebars
+++ b/v10-text-new-fulltext.handlebars
@@ -120,7 +120,7 @@
     <div class="grid-x grid-margin-x">
       <div class="cell large-9">
         <div class="section-heading--basic text-margin-reset">
-          {{#ifSet element="News Types" ~}}
+          {{#ifSet element="News Topics" ~}}
             <h2 class="oho-animate fade-in oho-animate--in">Similar News &amp; Stories</h2>
             <div class="section-heading__link global-spacing--2x oho-animate fade-in oho-animate--in">
               {{#each (selected element="News Topics") ~}}
