--- a/v10-text-related-masonry.handlebars
+++ b/v10-text-related-masonry.handlebars
@@ -6,6 +6,12 @@
       
       <h3 class="h5 funderline">{{fulltext linkText=(publish element="Title")}}</h3>
 
+      {{#ifSet element="News Types" ~}}
+      <div class="eyebrow">
+
+                {{(selected element="News Types") ~}}
+      </div>
+
       <div class="eyebrow"><t4 type="content" name="News Types" output="normal" display_field="value" /></div>
       <div class="global-spacing--2x">
         <t4 type="content" name="Article Subhead" output="normal" modifiers="striptags,htmlentities" />
