--- a/v10-text-related-masonry.handlebars
+++ b/v10-text-related-masonry.handlebars
@@ -2,15 +2,12 @@
 	<article class="news-story--item">
         {{embed layout="v10/text/masonry-image"}}
     <div class="news-story__text text-margin-reset">
-      <h3 class="h5 funderline"><a href="<t4 type="content" name="Title" output="fulltext" use-element="true" filename-element="Title" modifiers="striptags,htmlentities" />"><t4 type="content" name="Title" output="normal" modifiers="striptags,htmlentities" /></a></h3>
-      
       <h3 class="h5 funderline">{{fulltext linkText=(publish element="Title")}}</h3>
-
       {{#ifSet element="News Types" ~}}
       <div class="eyebrow">
-
-                {{(selected element="News Types") ~}}
+        {{selectedValues element="News Types"}}
       </div>
+      {{~/ifSet}}
 
       <div class="eyebrow"><t4 type="content" name="News Types" output="normal" display_field="value" /></div>
       <div class="global-spacing--2x">
